--- a/main_page/templates/main_page/sponsors.html
+++ b/main_page/templates/main_page/sponsors.html
@@ -10,7 +10,61 @@
                 <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
                     <br>
                     <p>Partners &amp; Sponsors</p>
-                    <h4>CURRENT SPONSOR</h4>
+                    <h4>CURRENT SPONSORS</h4>
+                </div>
+            </div>
+    
+             <div class="row">
+                <div class="col-12">
+                    
+                    <div class="our-sponsor-area d-flex flex-wrap">
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="https://youthincmag.com/"><img src="{% static 'main_page/img/core-img/youth.png' %}" alt=""></a>
+                        </div>
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="https://influence.co/campusbloggers"><img src="{% static 'main_page/img/core-img/download.png' %}" alt=""></a>
+                        </div>
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="https://feevin.in/"><img src="{% static 'main_page/img/core-img/feevin.jpg' %}" alt=""></a>
+                        </div>
+                        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="http://www.faadooengineers.com/"><img src="{% static 'main_page/img/core-img/faadoo.png' %}" alt=""></a>
+                        </div>
+        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="http://www.knowafest.com/college-fests/events"><img src="{% static 'main_page/img/core-img/know.png' %}" alt=""></a>
+                        </div>
+        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="https://duexpress.in/"><img src="{% static 'main_page/img/core-img/duex.png' %}" alt=""></a>
+                        </div>
+                        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="https://chandigarhx.com/"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="https://collegedunia.com/"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="our-sponsor-client-area section-padding-100">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-12">
+                <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
+                    <br>
+                    <p>Partners &amp; Sponsors</p>
+                    <h4>PREVIOUS SPONSORS</h4>
                 </div>
             </div>
     
@@ -73,60 +127,6 @@
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a href="https://punjabkesari.com/"><img src="{% static 'main_page/img/core-img/punjab.jpg' %}" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="our-sponsor-client-area section-padding-100">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-12">
-                <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
-                    <br>
-                    <p>Partners &amp; Sponsors</p>
-                    <h4>PREVIOUS SPONSOR</h4>
-                </div>
-            </div>
-    
-             <div class="row">
-                <div class="col-12">
-                    
-                    <div class="our-sponsor-area d-flex flex-wrap">
-                    
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="https://youthincmag.com/"><img src="{% static 'main_page/img/core-img/youth.png' %}" alt=""></a>
-                        </div>
-                    
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="https://influence.co/campusbloggers"><img src="{% static 'main_page/img/core-img/download.png' %}" alt=""></a>
-                        </div>
-                    
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="https://feevin.in/"><img src="{% static 'main_page/img/core-img/feevin.jpg' %}" alt=""></a>
-                        </div>
-                        
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="http://www.faadooengineers.com/"><img src="{% static 'main_page/img/core-img/faadoo.png' %}" alt=""></a>
-                        </div>
-        
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="http://www.knowafest.com/college-fests/events"><img src="{% static 'main_page/img/core-img/know.png' %}" alt=""></a>
-                        </div>
-        
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="https://duexpress.in/"><img src="{% static 'main_page/img/core-img/duex.png' %}" alt=""></a>
-                        </div>
-                        
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="https://chandigarhx.com/"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
-                        </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="https://collegedunia.com/"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
                         </div>
                     </div>
                 </div>
