--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -20,7 +20,7 @@
                     <h5>BootCamp</h5>
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
 
                     </div>
                     <br>
@@ -39,10 +39,10 @@
                             <img src="{% static 'startup_conclave/img/startup.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
-                    <h5>Startup</h5>
+                    <h5>Investor's Pitch</h5>
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 8th & 9th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
 
                     </div>
                     <br>
