--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -39,7 +39,7 @@
                             <img src="{% static 'startup_conclave/img/startup.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
-                    <h5>Investor's Pitch</h5>
+                    <h5>Startup</h5>
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
                         <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
