--- a/main_page/templates/main_page/event1.html
+++ b/main_page/templates/main_page/event1.html
@@ -39,7 +39,7 @@
                         <!-- Post Title -->
                         <h4 class="post-title">ABOUT EVENT</h4>
 
-                        <h5>The prize money for this event is {{ event.prize.normalize }} thousand.</h5>
+                        <h5>There are prizes worth {{ event.prize.normalize }} thousand for this event.</h5>
                         <p>{{event.description}}</p>
                         <br>
                         <h5>Rules &amp; Team Members</h5>
