Rulebook Startup Conclave

--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -26,8 +26,7 @@
                     <br>
                     <a href="{% url 'startup_conclave:register_for_bootcamp' %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
-                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
-                        Now</a>
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register</a>
 
                 </div>
 
@@ -48,8 +47,10 @@
                     <br>
                     <a href="{% url 'startup_conclave:register_for_startup' %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
-                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
-                        Now</a>
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register</a>
+                    <a href="https://drive.google.com/file/d/19jqvP1HS1rxvDVjBG1AZfmhCf7mvoRJL/view?usp=sharing" class="btn confer-btn-white"
+                        style="border: 2px solid rgb(43, 2, 143); color: black;"
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Rulebook</a>
 
                 </div>
 
@@ -70,8 +71,7 @@
                     <br>
                     <a href="{% url 'startup_conclave:register_for_stall' %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
-                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
-                        Now</a>
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register</a>
 
                 </div>
 
