--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -28,6 +28,9 @@
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register</a>
 
+                    <a href="https://docs.google.com/document/d/118lP-RkeHNWzvCSCb3qS6BXCaj6wLlwhSwKSrNfBCiw/edit?usp=drivesdk" class="btn confer-btn-white"
+                        style="border: 2px solid rgb(43, 2, 143); color: black;"
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Rulebook</a>
                 </div>
 
             </div>
