--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -67,8 +67,8 @@
                     </div>
                     <h5>Stalls</h5>
                     <div class="post-meta">
-                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 8th & 9th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 3 Days</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th, 8th & 9th February, 2020</a>
 
                     </div>
                     <br>
