Fix techconnect name input error

--- a/techconnect/templates/techconnect/register.html
+++ b/techconnect/templates/techconnect/register.html
@@ -6,7 +6,7 @@
 
 <!-- ##### Breadcumb Area Start ##### -->
 <div class="breadcumb-area bg-img" style="background-image: url(img/bg-img/breadcumb.jpg);">
-    <div class="bradcumbContent">
+    <div class="bradcumbContent" style="width: 500px;">
         <h2>{{ heading }}</h2>
     </div>
 </div>
