Change Stall registration to google form

--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -72,7 +72,7 @@
 
                     </div>
                     <br>
-                    <a href="{% url 'startup_conclave:register_for_stall' %}" class="btn confer-btn-white"
+                    <a href="https://docs.google.com/forms/d/1zp5fgssbBlBYroAL_krKKJ6I8s6xpD_c-Mq8C5euKqg/viewform" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register</a>
 
