--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -19,7 +19,7 @@
                     </div>
                     <h5>BootCamp</h5>
                     <div class="post-meta">
-                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
                         <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
 
                     </div>
