--- a/TSP/templates/TSP/result_view.html
+++ b/TSP/templates/TSP/result_view.html
@@ -13,21 +13,21 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Your Result</h5>
-                            <h4 style="color: black;">
-                                    Advitiya ID : hjjh
-                                </h4>
-                            <h4 style="color: black;">
-                                Name : hjjh
-                            </h4>
-                            <h4 style="color: black;">
-                                School : kjgkjg
-                            </h4>
-                            <h4 style="color: black;">
-                                Marks : 878
-                            </h4>
-                            <h4 style="color: black;">
-                                Rank : 878
-                            </h4>
+                            <h5 style="color: black;">
+                                    Advitiya ID : <b>{{data.advitiya_id}}</b>
+                                </h5>
+                            <h5 style="color: black;">
+                                Name : <b>{{data.name}}</b>
+                            </h5>
+                            <h5 style="color: black;">
+                                School : <b>{{data.school}}</b>
+                            </h5>
+                            <h5 style="color: black;">
+                                Marks : <b>{{data.marks}}</b>
+                            </h5>
+                            <h5 style="color: black;">
+                                Rank : <b>{{data.rank}}</b>
+                            </h5>
                         </div>
                     </div>
                 </div>
