Change sponsors link

--- a/main_page/templates/main_page/sponsors.html
+++ b/main_page/templates/main_page/sponsors.html
@@ -90,45 +90,45 @@
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="https://hoverrobotix.com/">
                     <img src="{% static 'main_page/img/core-img/hover.png' %}" style="height:80px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="https://idsil.com/">
                     <img src="{% static 'main_page/img/core-img/ids.png' %}" style="height:80px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="https://www.isro.gov.in/">
                     <img src="{% static 'main_page/img/core-img/isro.png' %}" style="height:150px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="#">
                     <img src="{% static 'main_page/img/core-img/mentox.jpg' %}" style="height:100px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="https://www.netsolutions.com/">
                     <img src="{% static 'main_page/img/core-img/net_solutuons.jpg' %}" style="height:80px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="http://www.novabeans.com/">
                     <img src="{% static 'main_page/img/core-img/nova.png' %}" style="height:80px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="https://punjabinfotech.gov.in/">
                     <img src="{% static 'main_page/img/core-img/punjab_infro_tech.png' %}"
                         style="height:80px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.codingninjas.com/">
+                <a href="http://www.scl.gov.in/">
                     <img src="{% static 'main_page/img/core-img/scl_lab.png' %}" style="height:80px; width:auto;"
                         alt="">
                 </a>
@@ -145,14 +145,14 @@
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h4>Grooming Partner</h4>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.beardo.in/">
                     <img src="{% static 'main_page/img/core-img/beardo.jpg' %}" style="height:180px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h4>Energy Drink Partner</h4>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.monsterenergy.com/in/en">
                     <img src="{% static 'main_page/img/core-img/monster.png' %}" style="height:180px; width:auto;"
                         alt="">
                 </a>
@@ -163,72 +163,72 @@
                 <h2>School Outreach Partners</h2><br>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.ednite.com/">
                     <img src="{% static 'main_page/img/core-img/ednite.png' %}" style="height:150px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.wiley.com/en-us">
                     <img src="{% static 'main_page/img/core-img/wiley.png' %}" style="height:80px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://schoollog.in/">
                     <img src="{% static 'main_page/img/core-img/school_log.jpg' %}" style="height:100px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://spsti.org/">
                     <img src="{% static 'main_page/img/core-img/spsti.jpg' %}" style="height:180px; width:auto;" alt="">
                 </a>
             </div>
 
             <div class="col-md-12 mx-auto sponsor-single">
                 <h4>Workshops Partner</h4>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.diginique.com/">
                     <img src="{% static 'main_page/img/core-img/dignique.png' %}" style="height:120px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h4>Beverage Partner</h4>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.torquesjal.com/">
                     <img src="{% static 'main_page/img/core-img/jal.jpg' %}" style="height:120px; width:auto;" alt="">
                 </a>
             </div>
 
             <div class="col-md-4 mx-auto sponsor-single">
                 <h4>Eco-System Partner</h4>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.learningwhiletravelling.com/">
                     <img src="{% static 'main_page/img/core-img/lwt.jpg' %}" style="height:120px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h5>Official Gifting Partner</h5>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.thesouledstore.com/">
                     <img src="{% static 'main_page/img/core-img/souled_store_logo.png' %}"
                         style="height:120px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h4>Vision Partner</h4>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.lensfit.com/">
                     <img src="{% static 'main_page/img/core-img/lensfit.png' %}" style="height:120px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h5>Internship & Training Partner</h5>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://internshala.com/">
                     <img src="{% static 'main_page/img/core-img/Internshala_company_logo.png' %}"
                         style="height:120px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h4>Goodies Partner</h4>
-                <a href="https://www.zoomcar.com/">
+                <a href="https://www.turmswear.com/">
                     <img src="{% static 'main_page/img/core-img/turns_wear.jpg' %}" style="height:120px; width:auto;"
                         alt="">
                 </a>
@@ -242,7 +242,7 @@
             </div>
             <div class="col-md-4 mx-auto sponsor-single">
                 <h4> Hospitality Partner</h4>
-                <a href="https://foxmula.com/">
+                <a href="https://www.offbeatccu.com/">
                     <img src="{% static 'main_page/img/core-img/offbeat.png' %}" style="height:130px; width:auto;"
                         alt="">
                 </a>
@@ -253,49 +253,49 @@
             </div>
 
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://youthincmag.com/">
                     <img src="{% static 'main_page/img/core-img/youth.png' %}" style="height:120px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="#">
                     <img src="{% static 'main_page/img/core-img/download.png' %}" style="height:120px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://feevin.in/">
                     <img src="{% static 'main_page/img/core-img/feevin.jpg' %}" style="height:120px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="http://www.faadooengineers.com/">
                     <img src="{% static 'main_page/img/core-img/faadoo.png' %}" style="height:120px; width:auto;"
                         alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="http://www.knowafest.com/college-fests/events">
                     <img src="{% static 'main_page/img/core-img/know.png' %}" style="height:120px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://duexpress.in/">
                     <img src="{% static 'main_page/img/core-img/duex.png' %}" style="height:120px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://chandigarhx.com/">
                     <img src="{% static 'main_page/img/core-img/chand.png' %}" style="height:120px; width:auto;" alt="">
                 </a>
             </div>
             <div class="col-md-3 mx-auto sponsor-single">
-                <a href="https://www.zoomcar.com/">
+                <a href="https://collegedunia.com/">
                     <img src="{% static 'main_page/img/core-img/dunia.png' %}" style="height:120px; width:auto;" alt="">
                 </a>
             </div>
-            <div class="col-md-3 mx-auto sponsor-single">
+            <div class="http://www.theeducationtree.com">
                 <a href="https://www.zoomcar.com/">
                     <img src="{% static 'main_page/img/core-img/tree.png' %}" style="height:120px; width:auto;" alt="">
                 </a>
