--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
@@ -197,7 +197,6 @@
     </footer>
     {%endblock%}
 
-    {% block scripts %}{%endblock%}
     <!-- Bootstrap core JavaScript and other JavaScript Files
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -213,6 +212,7 @@
     <script src="{% static 'main_page/js/confer.bundle.js' %}"></script>
     <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
     <script src="{% static 'main_page/js/active.js' %}"></script>
+    {% block scripts %}{%endblock%}
     <!-- <script src="{% static 'main_page/js/jquery.min.js' %}"></script> -->
 
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
