--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -145,8 +145,8 @@
                             </p>
                             <p><i class="fa fa-phone mr-3"></i>Website Related Queries: Adarsh(
                                 <a href="tel:+91-7355404764" style="color: white;">7355404764</a>)</p>
-                            <p><i class="fa fa-phone mr-3"></i>Marketing Concerns: Rahul(
-                                <a href="tel:+91-9915405007" style="color: white;">9915405007</a>)</p>
+                            <p><i class="fa fa-phone mr-3"></i>Marketing Concerns: Ujjwal(
+                                <a href="tel:+91-8837896465" style="color: white;">8837896465</a>)</p>
                             <p><i class="fa fa-phone mr-3"></i>Event Related Queries: Abhinash(
                                 <a href="tel:+91-8001481473" style="color: white;">8001481473</a>)</p>
                             <p><i class="fa fa-envelope-o mr-3"></i>advitiya@iitrpr.ac.in</p>
