--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -59,6 +59,7 @@
                                 <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
                                 <li><a href="{% url 'main_page:workshop'%}">Workshops</a></li>
                                 <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
+                                <li><a href="{% url 'main_page:swe' %}">SWE</a></li>
 
                                 <li><a href="#"><i class="zmdi zmdi-caret-down-circle"></i> More</a>
                                     <ul class="dropdown" style="width: 300%;">
