--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -54,6 +54,13 @@
             For Events</a>
         {% endif %}
     </center>
+    <br>
+    <center>
+        <p style="color: white;">Get Notifications & Results on</p>
+        <a href="https://play.google.com/store/apps/details?id=com.softcom.advitiya" class="btn confer-btn-white">
+            <i class="zmdi zmdi-google-play zmdi-hc-lg"></i> Advitiya App
+        </a>
+    </center>
     <div class="container">
         <br><br>
         <div class="row align-items-center">
