--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -2,25 +2,31 @@
 {% load static %}
 
 {% block body %}
-<section class="about-us-countdown-area section-padding-100-0"
- style="background-image:url({% static 'main_page/img/bg-img/college_bg.jpg' %}); background-repeat:
+<section class="about-us-countdown-area section-padding-100-0" style="background-image:url({% static 'main_page/img/bg-img/college_bg.jpg' %}); background-repeat:
     no-repeat; background-size: cover;" id="about">
     <div class="container">
         <div class="row align-items-center">
             <!-- About Content -->
             <div class="col-md-8 mx-auto" style="background-color: rgba(0, 0, 0, 0.7); margin-top: 50px;
-             margin-bottom: 50px; border-radius: 20px; padding: 50px;">
+             margin-bottom: 50px; border-radius: 20px; padding: 50px; padding-top: 10px;">
                 <br>
                 <div class="about-content-text" style="color: white;">
+                    <center>
+                        <p>Get Notifications & Results on</p>
+                        <a href="https://play.google.com/store/apps/details?id=com.softcom.advitiya"
+                            class="btn confer-btn-white">
+                            <i class="zmdi zmdi-google-play zmdi-hc-lg"></i> Advitiya App
+                        </a>
+                    </center><br>
                     <h3>Important Note</h3>
                     <ul>
                         The registration fee for the events is Rs.400 per participant. After paying this nominal
                         fee, one can participate in any no. of events.<br><br>
-                        You may want to get accommodation during the days of ADVITIYA. Book your accommodation before 
+                        You may want to get accommodation during the days of ADVITIYA. Book your accommodation before
                         all the rooms are filled, and we close the accommodation portal.
                         <br><br>
-                        <center><a href="{% url 'accomodation:index'%}"
-                            class="btn confer-btn-white">Get Accommodation</a></center>
+                        <center><a href="{% url 'accomodation:index'%}" class="btn confer-btn-white">Get
+                                Accommodation</a></center>
                     </ul>
                     <br>
                     <h3>Event Registration Process</h3>
@@ -28,12 +34,12 @@
                     <ul>
                         <li style="list-style-type:disc;">
                             Step 1: Register as a participant and get your ADVITIYA ID. <a
-                                href="{% url 'main_page:register_as_participant' %}"
-                                style="color: blue;">(Click Here)</a>
+                                href="{% url 'main_page:register_as_participant' %}" style="color: blue;">(Click
+                                Here)</a>
                         </li>
                         <li style="list-style-type:disc;">
                             Step 2: Pay the registration fee. <a href="{% url 'main_page:payment' %}"
-                            style="color: blue;">(Click
+                                style="color: blue;">(Click
                                 Here)</a>
                         </li>
                         <li style="list-style-type:disc;">
