fix bootcamp in show user details

--- a/custom_admin/templates/custom_admin/user_detail.html
+++ b/custom_admin/templates/custom_admin/user_detail.html
@@ -106,7 +106,7 @@
 
                         <h5>Boot Camp</h5>
                         {% if boot_camp.count > 0 %}
-                        {% for bootcamp in start_up %}
+                        {% for bootcamp in boot_camp %}
                         <p>{{ bootcamp.team }}</p>
                         {% endfor %}
                         {% else %}
