Open registration for workshop

--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -11,6 +11,10 @@
              margin-bottom: 50px; border-radius: 20px; padding: 50px; padding-top: 10px;">
                 <br>
                 <div class="about-content-text" style="color: white;">
+                    <p style="color:red">
+                        The online registration is closed now. For offline registration please
+                        visit the Registration Desk.
+                    </p>
                     <center>
                         <p>Get Notifications & Results on</p>
                         <a href="https://play.google.com/store/apps/details?id=com.softcom.advitiya"
