--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -27,32 +27,44 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                                 </li>
                                 <li style="list-style-type:disc; text-align: left;">
                                     Step 2: [Optional] Get accomodation. <a
-                                        href="{% url 'main_page:get_workshop_accommodation' %}" style="color: blue;">(Click
+                                        href="{% url 'main_page:get_workshop_accommodation' %}"
+                                        style="color: blue;">(Click
                                         Here)</a>
                                 </li>
                             </ul>
                             <br>
                             <h3>Important Note</h3>
                             <ul>
-                                <li style="text-align: justify;">1. Exclusively for the workshop participants, we provide 
+                                <li style="text-align: justify;">1. Exclusively for the workshop participants, we
+                                    provide
                                     accomodation at cheaper rates.
                                     Get accomodation @ Rs.250 per day and enjoy a relaxing stay with 2 meals included.
+                                    <br>
+                                    <span style="color:red">
+                                        UPDATE: The online workshop accommodation registration is now closed. For offline registration visit
+                                        the Registration Desk. The offline workshop
+                                        accommodation fee is Rs. 250/day (<b>no meals included)</b>.
+                                    </span>
                                 </li><br>
                                 <a href="{% url 'main_page:get_workshop_accommodation'  %}" class="btn confer-btn-white"
                                     style="border: 2px solid rgb(43, 2, 143); color: black;"
                                     onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
                                     <i class="zmdi zmdi-hotel zmdi-hc-lg"> Get Accomodation</i></a>
                                 <br><br>
-                                <li style="text-align: justify;">2. A single participant may opt to attend two workshops (One on 
+                                <li style="text-align: justify;">2. A single participant may opt to attend two workshops
+                                    (One on
                                     'Personality Development and Placement
                                     Preparation' and other on any one of the below mentioned technical topics.)
-                                    </li>
-                                <li style="text-align: justify;"><br>If you are a Campus Ambassador for ADVITIYA, you can register 
-                                    for any of the workshops listed here for free. Get 10 people to register for some workshop and refer you
+                                </li>
+                                <li style="text-align: justify;"><br>If you are a Campus Ambassador for ADVITIYA, you
+                                    can register
+                                    for any of the workshops listed here for free. Get 10 people to register for some
+                                    workshop and refer you
                                     after payment. Thereafter, you may register for any workshop for free.
                                 </li><br>
-                                <li style="text-align: justify;">After you register for some workshop, you may give credit for 
-                                    registration to some of our Campus Ambassador. If you have already registered, 
+                                <li style="text-align: justify;">After you register for some workshop, you may give
+                                    credit for
+                                    registration to some of our Campus Ambassador. If you have already registered,
                                     <a href="{% url 'main_page:reffer_ca' %}">click here</a> to give them credits.
                                 </li><br>
                             </ul>
@@ -62,65 +74,65 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                     <a href="{% url 'main_page:benefits'  %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black; padding: 5px 5px; padding: 8px 25px 40px;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                    <i class="zmdi zmdi-assignment"> Benefits and Ceritfication</i></a>
+                        <i class="zmdi zmdi-assignment"> Benefits and Ceritfication</i></a>
                 </div>
             </div>
         </div>
 
         <div class="row wow fadeInUp" data-wow-delay="0.3s">
             {% for w_cat in WORKSHOP_CHOCIES %}
-                {% if w_cat.0 == 'm' %}
-                {%else%}
-                    <div class="col-md-12">
-                        <h2>{{ w_cat.1 }}</h2><br>
+            {% if w_cat.0 == 'm' %}
+            {%else%}
+            <div class="col-md-12">
+                <h2>{{ w_cat.1 }}</h2><br>
+            </div>
+            {% for workshop in workshops %}
+            {% if workshop.workshop_type == w_cat.0 %}
+            {% if workshop.show %}
+            <!-- Single We Offer Area -->
+            <div class="col-12 col-md-6 col-xl-4">
+                <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                    <!-- Icon -->
+                    <div class="single-blog-thumb">
+                        <center><a href="{% url 'main_page:workshop_register' workshop.id  %}">
+                                <img src="{{ workshop.photo_url }}" style="height: 200px;" alt=""></a>
+                        </center>
                     </div>
-                    {% for workshop in workshops %}
-                        {% if workshop.workshop_type == w_cat.0 %}
-                            {% if workshop.show %}
-                            <!-- Single We Offer Area -->
-                            <div class="col-12 col-md-6 col-xl-4">
-                                <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                                    <!-- Icon -->
-                                    <div class="single-blog-thumb">
-                                        <center><a href="{% url 'main_page:workshop_register' workshop.id  %}">
-                                                <img src="{{ workshop.photo_url }}" style="height: 200px;" alt=""></a>
-                                        </center>
-                                    </div>
-                                    <h5>{{workshop.name}}</h5>
-                                    {% if workshop.name == "Personality Development and Placement Preparation" %}
-                                    <div class="post-meta">
-                                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
-                                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th February, 2020</a>
-                                    </div>
-                                    {% elif workshop.name == "Social Media Marketing & SEO Details" %}
-                                    <div class="post-meta">
-                                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
-                                    </div>
-                                    {% else %}
-                                    <div class="post-meta">
-                                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 8th & 9th February, 2020</a>
-                                    </div>
-                                    {% endif %}
-                                    <div class="post-meta">
-                                        <h6 class="post-date"> Fee: Rs. {{workshop.fees}}</h6>
-                                    </div>
-                                    <a href="{% url 'main_page:workshop_register' workshop.id  %}" class="btn confer-btn-white"
-                                        style="border: 2px solid rgb(43, 2, 143); color: black;"
-                                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
-                                        Now</a>
-                                    <a href="{{ workshop.rulebook }}" class="btn confer-btn-white"
-                                        style="border: 2px solid rgb(43, 2, 143); color: black;"
-                                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                                        <i class="zmdi zmdi-info zmdi-hc-lg"></i> info</a>
-                                </div>
-                            </div>
-                            {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                    <div class="col-md-12"><br><br></div>
-                {% endif %}
+                    <h5>{{workshop.name}}</h5>
+                    {% if workshop.name == "Personality Development and Placement Preparation" %}
+                    <div class="post-meta">
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th February, 2020</a>
+                    </div>
+                    {% elif workshop.name == "Social Media Marketing & SEO Details" %}
+                    <div class="post-meta">
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
+                    </div>
+                    {% else %}
+                    <div class="post-meta">
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 8th & 9th February, 2020</a>
+                    </div>
+                    {% endif %}
+                    <div class="post-meta">
+                        <h6 class="post-date"> Fee: Rs. {{workshop.fees}}</h6>
+                    </div>
+                    <a href="{% url 'main_page:workshop_register' workshop.id  %}" class="btn confer-btn-white"
+                        style="border: 2px solid rgb(43, 2, 143); color: black;"
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
+                        Now</a>
+                    <a href="{{ workshop.rulebook }}" class="btn confer-btn-white"
+                        style="border: 2px solid rgb(43, 2, 143); color: black;"
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
+                        <i class="zmdi zmdi-info zmdi-hc-lg"></i> info</a>
+                </div>
+            </div>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+            <div class="col-md-12"><br><br></div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
